Fixing img paths

--- a/src/pages/posts/blog-big-wall-nutrition.mdx
+++ b/src/pages/posts/blog-big-wall-nutrition.mdx
@@ -25,7 +25,7 @@ import fuel3 from "../../images/posts/bwfuel2.jpg"
   
 Amity: First, I plan out the number of days that we will be on the wall, then account for breakfast, lunch/ day snacks, and dinner for each of those days. As I’m packing, I lay out all my meals and snacks and separate them by day. Life on a big wall is already logistically complicated, so the more food prep I can do beforehand, the easier it makes things on the wall. I’ll group, bag, and label each day’s worth of food so that it is easy to find in the haul bag and portion out when on the wall. There is no way to refrigerate things up there so that means mostly dehydrated or freeze dried meals for breakfast and dinner and lots of energy bars, trail mix, and other easily portable snack foods that provide both carbs and protein. Additionally, space and weight are at a premium, so maximizing energy density is important. 
 
-<img src={fuel} alt="Planning out each day's snacks" />
+<img src={fuel.src} alt="Planning out each day's snacks" />
   
 ### Marisa: Do you have certain foods you always bring or always avoid? Why?  
   
@@ -62,16 +62,16 @@ Dinner: I aim to get at least 25 grams of protein and 75-100 grams of carbs to h
 Dessert: 
 * Chocolate! A couple tasty bites are a tasty way to cap off the evening.  
 
-<img src={fuel1} alt="Amity enjoying dinner on the G7 portaledge" />
+<img src={fuel1.src} alt="Amity enjoying dinner on the G7 portaledge" />
   
    
 ### Marisa: How do you know how much food to bring?  
   
 Amity: Underfueling on a big wall climb is one of the biggest mistakes I see people make. You set yourself up for so much more success if you bring enough food. It is super easy to underestimate the amount of food you need when you are up there for multiple days in a row because when you are on the ground packing, it looks like a TON of food to haul. The energy expenditure while big wall climbing is extreme though!! Of course, the climbing itself takes a lot of energy, but then you add hauling a couple hundred pounds of gear plus exposure to the elements and additional psychological stress. All this adds up to massive energy expenditure! And each day compounds on the previous day so if you are rationing food straight away, you are just setting yourself up to be in a massive calorie deficit that will have a hugely detrimental effect on your performance, attitude, and decision making skills. My fueling strategies have improved with each big wall I’ve done, but mostly this just means bringing much more food than I used to!  
 
-<img src={fuel3} alt="Amity planning out meals for El Cap adventure" />
+<img src={fuel3.src} alt="Amity planning out meals for El Cap adventure" />
 The meals from Right On Trek for my adventure on El Niño with Brent Barghahn.  
-<img src={fuel2} alt="Amity planning out all their food for Golden Gate" />
+<img src={fuel2.src} alt="Amity planning out all their food for Golden Gate" />
 All our food for climbing Golden Gate with Tyler Karow, with gear in the background.  
   
 ### Marisa: Do you use electrolytes when doing big wall climbing?  
