--- a/src/pages/posts/blog-eat-more-do-more.mdx
+++ b/src/pages/posts/blog-eat-more-do-more.mdx
@@ -23,14 +23,14 @@ import restday from "../../images/posts/restday.jpg"
 
 There is no way around it for climbers—training can only get you so far. The other half of the equation is climbing nutrition. Amity Warme is an accomplished big wall climber who holds a Master’s degree in sports nutrition and is on her way to becoming a registered dietitian. Warme is the fifth woman to free climb Yosemite’s famous El Capitan in a day, and her tick-list includes heavy-hitters like Golden Gate 5.13a, Freerider 5.13a, and The Dream Team 5.13a. During her most recent season in Yosemite, Warme and her partner Will Sharp sent El Corazon 5.13b in a monstrous, ground-up effort. We sat down with her to chat about a bigger and more intimidating topic than big walls: a climber’s diet.
 
-<img src={corazon} alt="Amity lounging on El Cap" />
+<img src={corazon.src} alt="Amity lounging on El Cap" />
 
 Warme describes herself as an “active and energetic” person. In her youth, she channeled that energy into gymnastics until a career-ending injury cut her time as a gymnast short. Warme tells us she found climbing in college and the passion, along with a mission to promote adequate fueling for athletes, has driven her ever since.
 cliff camping during climb
 
 Warme’s motto is: eat more to do more. It’s as simple as it sounds, but she also knows that it is difficult to know where to start. There is an abundance of research on sports nutrition, diet trends come and go, and there’s always a hip new protein bar or supplement to buy. Today we will debunk some common misconceptions on climbing nutrition, and explore how you can apply some of the things she’s learned to your own climbing goals.
 
-<img src={packing} alt="Amity and Will prepping for El Corazon" />
+<img src={packing.src} alt="Amity and Will prepping for El Corazon" />
 
 ### Lightweight is Not the Right Weight
 
@@ -46,7 +46,7 @@ Undereating perpetuates a cycle of low energy availability which eventually lead
 
 Lightweight is not inherently the right weight.
 
-<img src={food} alt="Planning out food for a big wall" />
+<img src={food.src} alt="Planning out food for a big wall" />
 
 ### Carbs and Fat are Not Bad for You
 
@@ -70,7 +70,7 @@ In addition to the fuel your body needs to function on a daily basis to exist, i
 
 “We make it a lot more complicated than it is because we want to be in control of these things and we want kind of a magic fix. And you can go buy a low-carb, low-fat, low-everything product from the store and feel like that’s going to fix your weight or fix how you look or make you climb harder.”
 
-<img src={restday} alt="Amity fueling up on a rest day" />
+<img src={restday.src} alt="Amity fueling up on a rest day" />
 
 ### Listen to Your Body, Eat More to Do More
 
