--- a/src/pages/posts/blog-fuel-your-body.mdx
+++ b/src/pages/posts/blog-fuel-your-body.mdx
@@ -35,7 +35,7 @@ Read on to learn more about the detrimental effects of underfueling and how to r
 
 RED-S refers to the impairment of physiological functioning and athletic performance caused by low energy availability (LEA). It is a fundamental mismatch between the amount of energy consumed relative to the amount of energy expended through physical activity. RED-S is most prevalent in athletes participating in weight sensitive sports such as climbing and distance running. Both males and females can experience RED-S through either intentional under-eating or an inadvertent calorie deficit.
 
-#### Energy Output > Energy Intake => Low Energy Availability
+#### Energy Output > Energy Intake = Low Energy Availability
 
 ### How does RED-S develop?
 
