--- a/src/pages/posts/blog-underfueling.mdx
+++ b/src/pages/posts/blog-underfueling.mdx
@@ -25,9 +25,9 @@ A recent research study surveyed a sample of climbers regarding their dietary in
 
 Low energy availability occurs when the amount of energy expended through physical activity is greater than the amount of energy taken in from food.
 
-![Amity expending energy on Tricks are for Kids (5.13) in Indian Creek, UT](../src/images/posts/tricks.webp)
+![Amity expending energy on Tricks are for Kids (5.13) in Indian Creek, UT](../../images/posts/tricks.webp)
 
-#### Energy Output > Energy Intake => Low Energy Availability
+#### Energy Output > Energy Intake = Low Energy Availability
 
 As a result, the body does not have enough energy to support physiological functions needed to maintain optimal health. LEA can impact athletes whether they are consciously regulating their energy consumption (through chronic calorie restriction, fasting, skipping meals, restricting food groups, and/or using diet pills or laxatives), or whether they are unconsciously under-fueling relative to amount of energy expended through output (training, climbing, and other physical activity). Weight conscious climbers can quickly over-train and under-eat themselves into a state of LEA, leading to the compromise of nearly every system of the body as well as diminished performance capacity.
 
