--- a/src/pages/posts/media-gripped-book.mdx
+++ b/src/pages/posts/media-gripped-book.mdx
@@ -5,10 +5,10 @@ pubDate: 2023-11-29
 description: "Perhaps Yosemite's hardest stem corner..."
 author: null
 image: 
-  index: null
-  alt: null
-  caption: null
-  cred: null
+  index: 18
+  alt: Amity on Book of Hate
+  caption: Amity on Book of Hate
+  cred: Samuel Crossley
 origin: 
   name: 'Gripped'
   url: "https://gripped.com/news/amity-warme-ticks-yosemites-book-of-hate-capping-off-a-stellar-climbing-season/"
