Change video positioning (central), see if it fixes google search video indexing

--- a/src/pages/posts/media-youtube-closeup.mdx
+++ b/src/pages/posts/media-youtube-closeup.mdx
@@ -11,11 +11,14 @@ image:
   cred: Rachel Ross
 origin: 
   name: 'Arcteryx'
-  url: "https://www.youtube.com/watch?v=VBIvQphF080"
+  url: "https://www.youtube.com/embed/VBIvQphF080?si=kDFA-sUm9NdCszQA"
   date: 2024-06-26
 tags: ["climbing", "Arcteryx", "Squamish", "trad", "video", "media", "big wall"]
 type: video
 ---
+<br />
+<iframe class="youtube-embed" width="560" height="315" src="https://www.youtube.com/embed/VBIvQphF080?si=WTPYptGEkezdPCBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 Take a lesson from climber Amity Warme—climbing is trying hard.  
 
 Coming into the climbing world relatively late, Amity has quickly established herself as one of the world's best big wall free climbers. 
@@ -30,5 +33,3 @@ Get Close-Up with Amity Warme.
 
 Produced by: [El Flamingo Films](https://www.el-flamingo.de/)
 
-Watch the full video below:
-<iframe class="youtube-embed" width="560" height="315" src="https://www.youtube.com/embed/VBIvQphF080?si=WTPYptGEkezdPCBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
